--- a/pom.xml
+++ b/pom.xml
@@ -5,57 +5,57 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.shardingsphere</groupId>
     <artifactId>sharding-sphere</artifactId>
-    <version>3.1.0</version>
+   <version>3.1.0.2-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>${project.artifactId}</name>
-    
+
     <modules>
         <module>sharding-core</module>
-        
+
         <module>sharding-jdbc</module>
         <module>sharding-proxy</module>
-        
+
         <module>sharding-transaction</module>
         <module>sharding-orchestration</module>
         <module>sharding-opentracing</module>
-        
+
         <module>sharding-sql-test</module>
     </modules>
-    
+
     <properties>
         <java.version>1.7</java.version>
         <maven.version.range>[3.0.4,)</maven.version.range>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.build.locale>zh_CN</project.build.locale>
-        
+
         <guava.version>18.0</guava.version>
         <slf4j.version>1.7.7</slf4j.version>
-        
+
         <antlr4.version>4.7.1</antlr4.version>
-        
+
         <groovy.version>2.4.5</groovy.version>
         <snakeyaml.version>1.16</snakeyaml.version>
-        
+
         <netty.version>4.1.16.Final</netty.version>
         <commons-codec.version>1.10</commons-codec.version>
-        
+
         <javax.transaction.version>1.1</javax.transaction.version>
         <atomikos.version>4.0.4</atomikos.version>
-        
+
         <curator.version>2.10.0</curator.version>
         <grpc.version>1.7.0</grpc.version>
         <protobuf.version>3.4.0</protobuf.version>
         <guava-retrying.version>2.0.0</guava-retrying.version>
-        
+
         <opentracing.version>0.30.0</opentracing.version>
-        
+
         <lombok.version>1.16.4</lombok.version>
 
         <junit.version>4.12</junit.version>
         <hamcrest.version>1.3</hamcrest.version>
         <mockito.version>2.7.21</mockito.version>
         <logback.version>1.2.0</logback.version>
-        
+
         <hikari-cp.version>2.4.11</hikari-cp.version>
         <alibaba.druid.version>1.1.11</alibaba.druid.version>
         <commons-dbcp2.version>2.2.0</commons-dbcp2.version>
@@ -64,7 +64,7 @@
         <mysql-connector-java.version>5.1.42</mysql-connector-java.version>
         <postgresql.version>9.4.1212</postgresql.version>
         <mssql.version>6.1.7.jre7-preview</mssql.version>
-    
+
         <maven-compiler-plugin.version>3.3</maven-compiler-plugin.version>
         <maven-assembly-plugin.version>3.1.0</maven-assembly-plugin.version>
         <maven-resources-plugin.version>2.7</maven-resources-plugin.version>
@@ -90,10 +90,10 @@
         <protobuf-maven-plugin.version>0.5.0</protobuf-maven-plugin.version>
         <os-maven-plugin.version>1.5.0.Final</os-maven-plugin.version>
         <docker-maven-plugin.version>0.4.14</docker-maven-plugin.version>
-    
+
         <javadocExecutable>${java.home}/../bin/javadoc</javadocExecutable>
     </properties>
-    
+
     <dependencyManagement>
         <dependencies>
             <dependency>
@@ -111,13 +111,13 @@
                 <artifactId>jcl-over-slf4j</artifactId>
                 <version>${slf4j.version}</version>
             </dependency>
-            
+
             <dependency>
                 <groupId>org.antlr</groupId>
                 <artifactId>antlr4</artifactId>
                 <version>${antlr4.version}</version>
             </dependency>
-            
+
             <dependency>
                 <groupId>org.codehaus.groovy</groupId>
                 <artifactId>groovy</artifactId>
@@ -129,7 +129,7 @@
                 <artifactId>snakeyaml</artifactId>
                 <version>${snakeyaml.version}</version>
             </dependency>
-            
+
             <dependency>
                 <groupId>io.netty</groupId>
                 <artifactId>netty-all</artifactId>
@@ -140,7 +140,7 @@
                 <artifactId>commons-codec</artifactId>
                 <version>${commons-codec.version}</version>
             </dependency>
-            
+
             <dependency>
                 <groupId>javax.transaction</groupId>
                 <artifactId>jta</artifactId>
@@ -203,20 +203,20 @@
                 <artifactId>guava-retrying</artifactId>
                 <version>${guava-retrying.version}</version>
             </dependency>
-            
+
             <dependency>
                 <groupId>io.opentracing</groupId>
                 <artifactId>opentracing-util</artifactId>
                 <version>${opentracing.version}</version>
             </dependency>
-            
+
             <dependency>
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
                 <version>${lombok.version}</version>
                 <scope>provided</scope>
             </dependency>
-            
+
             <dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
@@ -259,7 +259,7 @@
                 </exclusions>
                 <scope>test</scope>
             </dependency>
-            
+
             <dependency>
                 <groupId>com.zaxxer</groupId>
                 <artifactId>HikariCP-java7</artifactId>
@@ -328,7 +328,7 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
-    
+
     <dependencies>
         <dependency>
             <groupId>com.google.guava</groupId>
@@ -342,12 +342,12 @@
             <groupId>org.slf4j</groupId>
             <artifactId>jcl-over-slf4j</artifactId>
         </dependency>
-        
+
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
-        
+
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -369,7 +369,7 @@
             <artifactId>logback-classic</artifactId>
         </dependency>
     </dependencies>
-    
+
     <build>
         <extensions>
             <extension>
@@ -437,7 +437,7 @@
                                         </goals>
                                     </pluginExecutionFilter>
                                     <action>
-                                        <ignore />
+                                        <ignore/>
                                     </action>
                                 </pluginExecution>
                                 <pluginExecution>
@@ -450,7 +450,7 @@
                                         </goals>
                                     </pluginExecutionFilter>
                                     <action>
-                                        <ignore />
+                                        <ignore/>
                                     </action>
                                 </pluginExecution>
                             </pluginExecutions>
@@ -544,9 +544,11 @@
                 <artifactId>protobuf-maven-plugin</artifactId>
                 <version>${protobuf-maven-plugin.version}</version>
                 <configuration>
-                    <protocArtifact>com.google.protobuf:protoc:${protobuf.version}:exe:${os.detected.classifier}</protocArtifact>
+                    <protocArtifact>com.google.protobuf:protoc:${protobuf.version}:exe:${os.detected.classifier}
+                    </protocArtifact>
                     <pluginId>grpc-java</pluginId>
-                    <pluginArtifact>io.grpc:protoc-gen-grpc-java:${grpc.version}:exe:${os.detected.classifier}</pluginArtifact>
+                    <pluginArtifact>io.grpc:protoc-gen-grpc-java:${grpc.version}:exe:${os.detected.classifier}
+                    </pluginArtifact>
                 </configuration>
                 <executions>
                     <execution>
@@ -640,7 +642,7 @@
              -->
         </plugins>
     </build>
-    
+
     <reporting>
         <plugins>
             <plugin>
@@ -718,7 +720,7 @@
             </plugin>
         </plugins>
     </reporting>
-    
+
     <repositories>
         <repository>
             <id>alfresco-maven-repo</id>
@@ -745,7 +747,7 @@
             </releases>
         </repository>
     </repositories>
-    
+
     <url>http://shardingsphere.io</url>
     <description>Distributed database middleware ecosphere</description>
     <licenses>
@@ -755,13 +757,13 @@
             <distribution>repo</distribution>
         </license>
     </licenses>
-    
+
     <scm>
         <connection>scm:https://github.com/sharding-sphere/sharding-sphere</connection>
         <developerConnection>scm:https://github.com/sharding-sphere/sharding-sphere</developerConnection>
         <url>https://github.com/sharding-sphere/sharding-sphere</url>
     </scm>
-    
+
     <mailingLists>
         <mailingList>
             <name>Zhangliang</name>
@@ -772,7 +774,7 @@
             <post>caohaoch@gmail.com</post>
         </mailingList>
     </mailingLists>
-    
+
     <developers>
         <developer>
             <id>zhangliang</id>
@@ -787,15 +789,20 @@
             <timezone>8</timezone>
         </developer>
     </developers>
-    
+
     <distributionManagement>
-        <snapshotRepository>
-            <id>sonatype-nexus-snapshots</id>
-            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-        </snapshotRepository>
+        <!--<snapshotRepository>-->
+            <!--<id>sonatype-nexus-snapshots</id>-->
+            <!--<url>https://oss.sonatype.org/content/repositories/snapshots</url>-->
+        <!--</snapshotRepository>-->
         <repository>
-            <id>sonatype-nexus-releases</id>
-            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
+            <id>release</id>
+            <url>http://up2m.win:8081/nexus/content/repositories/releases/</url>
         </repository>
+        <snapshotRepository>
+            <id>snapshots</id>
+            <url>http://up2m.win:8081/nexus/content/repositories/snapshots/</url>
+        </snapshotRepository>
+
     </distributionManagement>
 </project>
