--- a/sharding-opentracing/pom.xml
+++ b/sharding-opentracing/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>io.shardingsphere</groupId>
         <artifactId>sharding-sphere</artifactId>
-        <version>3.1.0</version>
+       <version>3.1.0.2-SNAPSHOT</version>
     </parent>
     <artifactId>sharding-opentracing</artifactId>
     <name>${project.artifactId}</name>
